# dynamodb-todo

./: .gitignore  .gitpod.yml  serverless.yml  test.sh
.localstack/: Dockerfile.gitpod
api/: decorators.py  dynamodb.py  pyproject.toml  response.py  serverless.yml  test.sh  types.py
api/routes/: create.py
api/routes/todos/: create.py  delete.py  get.py  handler.py  method_handlers.py  update.py
api/routes/user/: create.py  handler.py  method_handlers.py
api/src/: constants.py  decorators.py  dynamodb.py  errorcodes.py  log.py  response.py  types.py
api/src/routes/: authorize.py
api/src/routes/todos/: handler.py  method_handlers.py
api/src/routes/user/: handler.py  method_handlers.py
ui/: package-lock.json  package.json  serverless.yml
ui/src/: App.js  api.js  index.js  token.js
ui/src/components/: Authenticated.js  Form.js  Todo.js
