[tool.poetry]
name = "dynamodb-todo"
version = "0.1.0"
description = ""
authors = ["shawalli <shawn.p.wallis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.46"
CacheControl = "^0.12.11"
google-auth = "^2.6.6"
marshmallow = "^3.15.0"
marshmallow-dataclass = "^8.5.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
